added session check

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -35,7 +35,7 @@
         <!-- Содержимое меню -->
         <div class="p-8 mt-16">
             <nav class="space-y-4">
-              <a href="#" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+              <a href="{{ url_for('lk') }}" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
                 <img src="{{ url_for('static', filename='assets/img/svg/profile.svg') }}" alt="" class="w-12 h-12">
                 Профиль
               </a>
