--- a/templates/lkClient.html
+++ b/templates/lkClient.html
@@ -28,11 +28,46 @@
       </div>
   
       <!-- Menu Icon -->
-      <div class="text-3xl cursor-pointer mr-10">
+      <div class="text-3xl cursor-pointer mr-10"  onclick="toggleMenu()">
         <img src="{{ url_for('static', filename='assets/img/svg/burger-menu.svg') }}" alt="">
       </div>
       
     </header>
+
+     <!-- Боковое меню -->
+     <div id="sideMenu" class="fixed top-0 right-0 h-full w-80 bg-customWhite transform translate-x-full transition-transform duration-300 ease-in-out shadow-lg z-50">
+      <!-- Кнопка закрытия -->
+      <button onclick="toggleMenu()" class="absolute top-6 right-6">
+        <img src="{{ url_for('static', filename='assets/img/svg/close-modal.svg') }}" alt="Закрыть" class="w-6 h-6">
+      </button>
+      
+      <!-- Содержимое меню -->
+      <div class="p-8 mt-16">
+          <nav class="space-y-4">
+            <a href="{{ url_for('lk') }}" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+              <img src="{{ url_for('static', filename='assets/img/svg/profile.svg') }}" alt="" class="w-12 h-12">
+              Профиль
+            </a>
+            <a href="{{ url_for('aboutus') }}" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+              <img src="{{ url_for('static', filename='assets/img/svg/groups.svg') }}" alt="" class="w-12 h-12">
+              О нас
+            </a>
+            <a href="{{ url_for('contacts') }}" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+              <img src="{{ url_for('static', filename='assets/img/svg/contact.svg') }}" alt="" class="w-12 h-12">
+              Контакты
+            </a>
+            <a href="ourteam.html" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+              <img src="{{ url_for('static', filename='assets/img/svg/developers.svg') }}" alt="" class="w-12 h-12">
+              Разработчики
+            </a>
+            <a href="{{ url_for('faq') }}" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+              <img src="{{ url_for('static', filename='assets/img/svg/faq.svg') }}" alt="" class="w-12 h-12">
+              FAQ
+            </a>
+          </nav>
+        </div>
+
+    </div>
   
 <!-- Main Content -->
 <main class="container mx-auto mt-10 px-4">
@@ -274,6 +309,21 @@
       </div>
     </div>
   </dialog>
+
+  <script>
+    function toggleFaq(button) {
+        const content = button.nextElementSibling;
+        const arrow = button.querySelector('svg');
+        
+        if (content.classList.contains('hidden')) {
+            content.classList.remove('hidden');
+            arrow.style.transform = 'rotate(180deg)';
+        } else {
+            content.classList.add('hidden');
+            arrow.style.transform = 'rotate(0deg)';
+        }
+    }
+</script>
 
   
   <script>
