--- a/templates/openCapsula.html
+++ b/templates/openCapsula.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
       <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
-      <title>КАПСУЛА</title>
+      <title>КАПСУЛа</title>
    </head>
    <body class="bg-customWhite">
 
@@ -65,13 +65,8 @@
         </div>
       </div>
 
-      <div class="relative inline-block">
-        <img src="{{ url_for('static', filename='assets/img/png/kakayatocapsula.png') }}" alt="">
-        <a href="{{ url_for('opencapsula') }}">
-          <button class="absolute ml-[600px] -mt-[300px] bg-black text-customWhite text-xl px-8 py-4 rounded-full hover:bg-gray-800">
-            РАСКРЫТЬ КАПСУЛУ
-          </button>
-        </a>
+      <div>
+        <img src="{{ url_for('static', filename='assets/img/png/openCapsula.png') }}" alt="">
       </div>
   
     <!-- Footer Section -->
