--- a/templates/capsula.html
+++ b/templates/capsula.html
@@ -20,8 +20,8 @@
         <!-- Navigation -->
         <nav class="flex space-x-6 gap-5">
           <a href="{{ url_for('stylistam') }}"><button class="bg-black text-customWhite text-xl px-8 py-2 rounded-full hover:bg-gray-800">СТИЛИСТАМ</button></a>
-          <a href=""><button class="bg-black text-customWhite text-xl px-8 py-2 rounded-full hover:bg-gray-800">РАЗБОР ГАРДЕРОБА</button></a>
-          <a href="url_for('capsula')"><button class="bg-black text-customWhite text-xl px-8 py-2 rounded-full hover:bg-gray-800">КАПСУЛА</button></a>
+          <a href="{{ url_for('headerGarderob') }}"><button class="bg-black text-customWhite text-xl px-8 py-2 rounded-full hover:bg-gray-800">РАЗБОР ГАРДЕРОБА</button></a>
+          <a href="{{ url_for('capsula') }}"><button class="bg-black text-customWhite text-xl px-8 py-2 rounded-full hover:bg-gray-800">КАПСУЛА</button></a>
         </nav>
     
         <!-- Menu Icon -->
