--- a/templates/ourteam.html
+++ b/templates/ourteam.html
@@ -5,14 +5,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
       <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
-      <title>Выбор пола</title>
+      <title>Команда</title>
    </head>
    <body class="bg-customGray">
 
     <!-- Header -->
     <header class="flex items-center justify-between p-3 bg-customWhite shadow-md">
-      <!-- Logo -->
-      <div class="ml-20">
+      <!-- Logo and Orders Button Container -->
+      <div class="flex items-center gap-6 ml-20">
         <a href="{{ url_for('start_page') }}">
           <img src="{{ url_for('static', filename='assets/img/svg/logoHead.svg') }}" alt="">
         </a>
@@ -26,60 +26,62 @@
       </nav>
   
       <!-- Menu Icon -->
-      <div class="text-3xl cursor-pointer mr-10">
+      <div class="text-3xl cursor-pointer mr-10" onclick="toggleMenu()">
         <img src="{{ url_for('static', filename='assets/img/svg/burger-menu.svg') }}" alt="">
       </div>
+
     </header>
-
-    <main class="relative">
-        
-        <div class="relative">
-            <div class="absolute left-1/2 transform -translate-x-1/2 top-0 flex justify-center z-50 shadow-gradient">
-                <img src="{{ url_for('static', filename='assets/img/png/stilist.png') }}" alt="">
-            </div>
-        </div>
-
-        <h1 class="text-center text-9xl mt-10 font-serif playfair-weight-semibold">СТИЛИСТАМ</h1>
-
-        <p class="ml-14 mt-80 max-w-screen-sm text-2xl text-center max-h-64 oswald-weight-semibold">Кейсы дают портфолио +100500 очков к опыту: вы не только показываете свою работу, но и рассказываете, почему и зачем сделали так, а не иначе.</p>
-
-        <div class="flex justify-end mt-5 mr-10">
-            <img src="{{ url_for('static', filename='assets/img/svg/shtrikhCode.svg') }}" alt="">
-        </div>
-
-    </main>
-
-    <div class="flex flex-col lg:flex-row items-center justify-center min-h-screen">
-        <!-- Левая часть с изображением -->
-        <div class="w-full lg:w-1/3 flex justify-center mb-6 lg:mb-0">
-          <img src="{{ url_for('static', filename='assets/img/png/stilist_1.png') }}" alt="Модель" class="object-contain">
-        </div>
-    
-        <!-- Правая часть с текстом -->
-        <div class="w-full lg:w-1/2 text-center lg:text-left">
-          <h1 class="text-6xl mb-6 text-customBlack playfair-weight-semibold">Как работает?</h1>
-          <p class="text-3xl mb-4 oswald-weight-semibold">Выберите услугу: разбор гардероба или составление капсулы</p>
-    
-          <ul class="text-customBlack text-3xl mb-6 list-disc list-inside leading-8 oswald-weight-semibold">
-            <li><strong>Выберите заказ</strong></li>
-            <li><strong>Ознакомьтесь с анкетой</strong></li>
-            <li><strong>Выполните заказ</strong></li>
-            <li><strong>Получите баллы и отзывы - повысьте свой уровень</strong></li>
-          </ul>
-    
-          <p class="text-3xl text-customBlack oswald-weight-semibold">
-            Для того, чтобы получать больше заказов и пополнять базу клиентов, необходимо зарабатывать очки для повышения уровня. Чем выше ваш уровень, тем выше лояльность со стороны клиентов.
-          </p>
-        </div>
+  
+      <!-- Боковое меню -->
+    <div id="sideMenu" class="fixed top-0 right-0 h-full w-80 bg-customWhite transform translate-x-full transition-transform duration-300 ease-in-out shadow-lg z-50">
+      <!-- Кнопка закрытия -->
+      <button onclick="toggleMenu()" class="absolute top-6 right-6">
+        <img src="{{ url_for('static', filename='assets/img/svg/close-modal.svg') }}" alt="Закрыть" class="w-6 h-6">
+      </button>
+      
+      <!-- Содержимое меню -->
+      <div class="p-8 mt-16">
+        <nav class="space-y-4">
+          <a href="{{ url_for('lk') }}" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+            <img src="{{ url_for('static', filename='assets/img/svg/profile.svg') }}" alt="" class="w-12 h-12">
+            Профиль
+          </a>
+          <a href="{{ url_for('aboutus') }}" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+            <img src="{{ url_for('static', filename='assets/img/svg/groups.svg') }}" alt="" class="w-12 h-12">
+            О нас
+          </a>
+          <a href="{{ url_for('contacts') }}" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+            <img src="{{ url_for('static', filename='assets/img/svg/contact.svg') }}" alt="" class="w-12 h-12">
+            Контакты
+          </a>
+          <a href="ourteam.html" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+            <img src="{{ url_for('static', filename='assets/img/svg/developers.svg') }}" alt="" class="w-12 h-12">
+            Разработчики
+          </a>
+          <a href="{{ url_for('faq') }}" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+            <img src="{{ url_for('static', filename='assets/img/svg/faq.svg') }}" alt="" class="w-12 h-12">
+            FAQ
+          </a>
+        </nav>
       </div>
 
-      <div class="">
-        <p class="text-center text-7xl p-10 playfair-weight-semibold">УРОВНИ</p>
-      </div>
+    </div>
 
-      <div class="flex justify-center mb-40 mt-10">
-        <img src="{{ url_for('static', filename='assets/img/png/levels.png') }}" class="" alt="">
-      </div>
+    <div>
+        <img src="{{ url_for('static', filename='assets/img/png/ourteam.png') }}" class="object-cover" alt="">
+    </div>
+
+    <div>
+        <img src="{{ url_for('static', filename='assets/img/png/ourteam1.png') }}" class="object-cover" alt="">
+    </div>
+
+    <div>
+        <img src="{{ url_for('static', filename='assets/img/png/ourteam2.png') }}" class="object-cover" alt="">
+    </div>
+
+    <div>
+        <img src="{{ url_for('static', filename='assets/img/png/ourteam3.png') }}" class="object-cover" alt="">
+    </div>
   
     <!-- Footer Section -->
     <footer class="bg-black text-white py-8">
@@ -140,5 +142,56 @@
           <p class="text-base oswald-weight-medium">Copyright © RUSSIA 2024. Все права защищены</p>
       </div>
   </footer>
+
+    <script>
+        function openVideoModal() {
+            document.getElementById('videoModal').showModal();
+            document.body.style.overflow = 'hidden';
+        }
+    
+        function closeVideoModal() {
+            document.getElementById('videoModal').close();
+            document.body.style.overflow = 'auto';
+        }
+    
+        let currentSlide = 0;
+        const slider = document.getElementById('reviewsSlider');
+        const slides = slider.children;
+        
+        function showSlide(index) {
+          currentSlide = index;
+          const offset = -currentSlide * 100;
+          slider.style.transform = `translateX(${offset}%)`;
+        }
+        
+        function nextSlide() {
+          currentSlide = (currentSlide + 1) % slides.length;
+          showSlide(currentSlide);
+        }
+        
+        function prevSlide() {
+          currentSlide = (currentSlide - 1 + slides.length) % slides.length;
+          showSlide(currentSlide);
+        }
+    
+        function toggleMenu() {
+            const menu = document.getElementById('sideMenu');
+            const isOpen = menu.classList.contains('translate-x-0');
+            
+            if (isOpen) {
+                menu.classList.remove('translate-x-0');
+                menu.classList.add('translate-x-full');
+                document.body.style.overflow = 'auto';
+                document.body.style.paddingRight = '0';
+            } else {
+                const scrollbarWidth = window.innerWidth - document.documentElement.clientWidth;
+                menu.classList.remove('translate-x-full');
+                menu.classList.add('translate-x-0');
+                document.body.style.overflow = 'hidden';
+                document.body.style.paddingRight = `${scrollbarWidth}px`;
+            }
+        }
+    </script>
+
   </body>
 </html>
