ourteam added, side menu fix

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -47,7 +47,7 @@
             <img src="{{ url_for('static', filename='assets/img/svg/contact.svg') }}" alt="" class="w-12 h-12">
             Контакты
           </a>
-          <a href="ourteam.html" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
+          <a href="{{ url_for('team') }}" class="block oswald-weight-medium text-2xl hover:text-customGreen flex items-center gap-3">
             <img src="{{ url_for('static', filename='assets/img/svg/developers.svg') }}" alt="" class="w-12 h-12">
             Разработчики
           </a>
