--- a/templates/lkClient.html
+++ b/templates/lkClient.html
@@ -137,8 +137,17 @@
             <div class="space-y-4 text-lg">
               <a href="/chats"><button class="w-full oswald-weight-medium bg-black text-white py-3 rounded-full hover:bg-customGreen hover:text-black border-2 border-transparent hover:border-black transition-colors">Чат со стилистом</button></a>
               <button class="w-full oswald-weight-medium bg-black text-white py-3 rounded-full hover:bg-customGreen hover:text-black border-2 border-transparent hover:border-black transition-colors" onclick="openVideoModal()">Видеозвонок стилисту</button>
-              <button class="w-full oswald-weight-medium bg-black text-white py-3 rounded-full hover:bg-customGreen hover:text-black border-2 border-transparent hover:border-black transition-colors">Просмотреть резюме</button>
-              <button class="w-full oswald-weight-medium bg-black text-white py-3 rounded-full hover:bg-customGreen hover:text-black border-2 border-transparent hover:border-black transition-colors">Изменить резюме</button>
+              <a class="" href="garderob.html">
+                <div class="my-3">
+                  <button class="w-full oswald-weight-medium bg-black text-white py-3 rounded-full hover:bg-customGreen hover:text-black border-2 border-transparent hover:border-black transition-colors">Разобрать гардероб</button>
+                </div>
+              </a>
+
+              <a class="" href="{{ url_for('capsula') }}">
+                <div class="my-3">
+                  <button class="w-full oswald-weight-medium bg-black text-white py-3 rounded-full hover:bg-customGreen hover:text-black border-2 border-transparent hover:border-black transition-colors">Составить капсулу</button>
+                </div>
+              </a>
             </div>
             
           </div>
