lk ck headerGarderob btn

--- a/templates/lkClient.html
+++ b/templates/lkClient.html
@@ -137,7 +137,7 @@
             <div class="space-y-4 text-lg">
               <a href="/chats"><button class="w-full oswald-weight-medium bg-black text-white py-3 rounded-full hover:bg-customGreen hover:text-black border-2 border-transparent hover:border-black transition-colors">Чат со стилистом</button></a>
               <button class="w-full oswald-weight-medium bg-black text-white py-3 rounded-full hover:bg-customGreen hover:text-black border-2 border-transparent hover:border-black transition-colors" onclick="openVideoModal()">Видеозвонок стилисту</button>
-              <a class="" href="garderob.html">
+              <a class="" href="{{ url_for('headerGarderob') }}">
                 <div class="my-3">
                   <button class="w-full oswald-weight-medium bg-black text-white py-3 rounded-full hover:bg-customGreen hover:text-black border-2 border-transparent hover:border-black transition-colors">Разобрать гардероб</button>
                 </div>
