--- a/templates/choosePosadka.html
+++ b/templates/choosePosadka.html
@@ -71,11 +71,11 @@
                 </div>
 
                 <!-- Question Box -->
-                <div class="absolute right-28 top-72">
+                <div class="absolute right-0 top-0 transform translate-x-full translate-y-1/4">
                     <div class="rounded-xl bg-customWhite text-center border border-customBlack text-xl px-8 py-4">
                         <p>Какая посадка вам нравится?</p>
                     </div>
-                    <img src="{{ url_for('static', filename='assets/img/png/janna-skin10.png') }}" alt="Janna">
+                    <img src="{{ url_for('static', filename='assets/img/png/janna-skin10.png') }}" alt="Janna" class="mt-4">
                 </div>
 
                 <!-- Stripes -->
