--- a/templates/headerGarderob.html
+++ b/templates/headerGarderob.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="./static/css/output.css">
       <link rel="stylesheet" href="./static/css/customStyles.css">
-      <title>Выбор пола</title>
+      <title>Разбор гардероба</title>
    </head>
    <body class="bg-customGray">
 
@@ -79,9 +79,9 @@
                 <p class="text-lg oswald-weight-medium">Вы также получите классную памятку по хранению и уходу за одеждой</p>
                 
                 <div class="flex justify-center mt-6">
-                    <button class="bg-black text-white px-8 py-3 rounded-full oswald-weight-medium hover:bg-opacity-90">
+                    <a href="{{ url_for('anket_gender') }}"><button class="bg-black text-white px-8 py-3 rounded-full oswald-weight-medium hover:bg-opacity-90">
                         Заполнить анкету
-                    </button>
+                    </button></a>
                 </div>
             </div>
         </div>
