--- a/templates/chooseLenght.html
+++ b/templates/chooseLenght.html
@@ -66,7 +66,7 @@
                     </form>
                 </div>
 
-                <div class="absolute right-28 top-72">
+                <div class="absolute right-0 top-0 transform translate-x-full translate-y-1/4">
                     <div class="rounded-xl bg-customWhite text-center border border-customBlack text-xl px-8 py-4">
                         <p>Какая длина вам нравится?</p>
                     </div>
