--- a/templates/chooseSizeTopWoman.html
+++ b/templates/chooseSizeTopWoman.html
@@ -22,7 +22,7 @@
             <!-- Main Container -->
             <div class="bg-customWhite p-8 shadow-md">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <form method="post" class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <form method="post" class="col-span-2 grid grid-cols-1 md:grid-cols-2 gap-6">
                         <!-- First Column -->
                         <div class="space-y-2">
                             <div class="checkbox-container" onclick="toggleCheckbox('everyday1')">
