--- a/templates/skin9.html
+++ b/templates/skin9.html
@@ -50,7 +50,7 @@
 
                         <div class="flex justify-end mt-6">
                             <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                                <button type="submit" name="action" value="previous">
+                                <button type="submit" name="action" value="prev">
                                     <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
                                 </button>
                                 
