avatarts and some fix

--- a/templates/lkClientChat.html
+++ b/templates/lkClientChat.html
@@ -20,7 +20,7 @@
     <header class="flex items-center justify-between p-3 bg-customWhite shadow-md">
         <!-- Logo -->
         <div class="ml-20">
-          <a href="index.html">
+          <a href="{{ url_for('start_page') }}">
             <img src="{{ url_for('static', filename= 'assets/img/svg/logoHead.svg') }}" alt="">
           </a>
         </div>
