some anketa fixes

--- a/templates/chooseJeansForm.html
+++ b/templates/chooseJeansForm.html
@@ -84,7 +84,7 @@
 
                 <div class="absolute right-28 top-72">
                     <div class="rounded-xl bg-customWhite text-center border border-customBlack text-xl px-8 py-4">
-                        <p>Какая цветовая гамма вам ближе?</p>
+                        <p>выберите тип джинсов?</p>
                     </div>
                     <img src="{{ url_for('static', filename='assets/img/png/janna-skin10.png') }}" alt="">
                 </div>
