--- a/templates/choosePosadka.html
+++ b/templates/choosePosadka.html
@@ -55,7 +55,7 @@
                         <!-- Navigation Buttons -->
                         <div class="flex justify-end mt-6">
                             <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                                <button type="button" onclick="submitForm('previous')" class="hover:opacity-75">
+                                <button type="button" onclick="submitForm('prev')" class="hover:opacity-75">
                                     <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
                                 </button>
                                 
