--- a/templates/chooseSizeBottomWoman.html
+++ b/templates/chooseSizeBottomWoman.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
-    <title>Document</title>
+    <title>Размер низа</title>
 </head>
 <body>
 
@@ -83,7 +83,7 @@
                     <!-- Перемещаем кнопки внутрь формы -->
                     <div class="flex justify-end mt-6">
                         <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                            <button type="submit" name="action" value="previous">
+                            <button type="submit" name="action" value="prev">
                                 <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
                             </button>
                             
