--- a/templates/chooseSizeTopWoman.html
+++ b/templates/chooseSizeTopWoman.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
-    <title>Document</title>
+    <title>Размер верха</title>
 </head>
 <body>
 
@@ -92,7 +92,7 @@
                         <!-- Navigation Buttons - Moved inside form -->
                         <div class="col-span-2 flex justify-end mt-6">
                             <div class="border-2 border-customBlack rounded-full py-1 px-2 flex items-center">
-                                <button type="submit" name="action" value="previous">
+                                <button type="submit" name="action" value="prev">
                                     <img src="{{ url_for('static', filename='assets/img/png/prev.png') }}" alt="Previous">
                                 </button>
                                 
