--- a/templates/chooseSkinnyOrNotBottom.html
+++ b/templates/chooseSkinnyOrNotBottom.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/output.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/customStyles.css') }}">
-    <title>Document</title>
+    <title>облегающе или нет низ</title>
 </head>
 <body>
 
